--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "mime-types": "^2.1.28",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "socket.io": "^3.1.0",
     "tedious": "^11.0.1"
   }
