--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mime-types": "^2.1.28",
-    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
-    "socket.io": "^3.1.0",
-    "tedious": "^11.0.1"
+    "rest-mssql-nodejs": "^1.0.9",
+    "socket.io": "^3.1.0"
   }
 }
