--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "nodemon": "^2.0.7",
     "rest-mssql-nodejs": "^1.0.9",
     "socket.io": "^3.1.0"
